Fix alignemnt of toggles group container with flexbox

--- a/src/components/toggles/TogglesContainer.scss
+++ b/src/components/toggles/TogglesContainer.scss
@@ -1,5 +1,5 @@
 .toggles-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  justify-content: space-around;
   margin: 0 0 70px;
 }
